--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.RecycleSQL"
         tools:targetApi="31">
         <activity
-            android:name=".ProductForm"
+            android:name=".CharacterForm"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
